[package]
name = "burlap"
version = "1.2.6"
edition = "2021"
description = "A powerful and user-friendly Sack interpreter"
repository = "https://github.com/Bigjango13/Burlap"

[dependencies]
# For history file
home = {version = "0.5.4", optional = true}
# For values
impl_ops = "0.1.1"
# For speed
rustc-hash = "1.1.0"
# For lexing
logos = "0.13.0"

[features]
default = []

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
